help buttons angepasst

--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -58,7 +58,6 @@
                         <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
                         <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="allusers.html">All Users</a></li>
-                            <li><a href="allphotos.html">All Pictures</a></li>
                             <li><a href="FAQ.html">FAQ</a></li>
                             <li><a href="AGB.html">AGB's</a></li>
                         </ul>
@@ -94,7 +93,7 @@
 
     <!--help button-->
     <button class="helpBtn">Help
-        <span class="helpText">On this page you can see all the users that are registered. </span>
+        <span class="helpText">On this page you can search for a specific user. </span>
     </button>
 
 <script>
