--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -269,8 +269,9 @@
     <!--Help button-->
     <button class="helpBtn2">Help
         <span class="helpText">To upload new pictures please click on the "+" and select local files you want to
-        upload. <br> To sign out please click on the button "Sign out" on the drop-
-        down button "Menu".</span>
+        upload. <br>
+        Scroll to the bottom of the page to see the pictures you have uploaded.
+        </span>
     </button>
 
     <footer class="footer">
