--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -206,7 +206,8 @@ console.log('shootout gesendet');
 <!--creates Help button-->
 <div id = "helpBtn4">
     <button class="helpBtn4">Help
-        <span class="helpText">To see the picture ranking of a selected shootout click on "Picture Ranking".
+        <span class="helpText">To see the picture ranking of a specific shootout select "Picture Ranking".<br>
+        Using the searchbar you can search for specific shootouts.
        </span>
     </button>
 </div>
