--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -136,9 +136,11 @@
                 <span class="close" onclick="closemodcS()">&times;</span>
 
                     <button class="helpBtn5">Help
-                        <span class="helpText">Please enter the name of your new shootout. <br>
-    If you want to share this shootout with everyone select "public" below.
-    </span>
+                        <span class="helpText">Please enter the name of your new shootout<br>
+                            and choose a category for your shootout. <br>
+                            If you choose 'Usershootout' as your category, all of your pictures will be added to the shootout. <br>
+                            If you choose a different category, the pictures belonging to that category from all users will be added to the shootout.
+                        </span>
                     </button>
                     <div class="modal-header">
                     <h2> Create your shootout!</h2>
@@ -197,9 +199,9 @@
 
 <!--Help button-->
 <button class="helpBtn1">Help
-    <span class="helpText">Please click on the picture you like more to participate in this shootout. <br>
-    To participate in another shootout select one on the left. Click on the button "Create Shootout" to create your own
-    new shootout.
+    <span class="helpText">To participate in a shootout select one listed in the sidebar on the left. <br>
+    Then click on the picture you like better out of the two pictures displayed in the center of the page.<br>
+    lick on the button "Create Shootout" to create your own new shootout.
     </span>
 </button>
 
