--- a/frontend/static/html/photographerRanking.html
+++ b/frontend/static/html/photographerRanking.html
@@ -32,9 +32,10 @@
             <!--creates Help button-->
             <div id="helpBtn3">
                 <button class="helpBtn3">Help
-                    <span class="helpText"> On this page you see the picture ranking of the selected shootout. To
-                      get back to the different shootouts click on "Shootout Rankings" at the top menu.
-      </span>
+                    <span class="helpText"> On this page the top 3 photographers are displayed. <br>
+                    The photographer whose picture has won in the most shootouts is the best ranked photographer.<br>
+                    To get back to the other Rankings click on the tab "Leaderboars" on the top menu.
+                    </span>
                 </button>
             </div>
 
