--- a/frontend/static/html/pictureRanking.html
+++ b/frontend/static/html/pictureRanking.html
@@ -32,8 +32,9 @@
             <!--creates Help button-->
             <div id="helpBtn3">
                 <button class="helpBtn3">Help
-                    <span class="helpText"> On this page you see the picture ranking of the selected shootout. To
-                      get back to the different shootouts click on "Shootout Rankings" at the top menu.
+                    <span class="helpText"> On this page the 3 recent best pictures.<br>
+                    The best picture is the one with most of the points.<br>
+                    To get back to the other Rankings click on the tab "Leaderboars" on the top menu.
       </span>
                 </button>
             </div>
