--- a/frontend/static/html/pictureUpload.html
+++ b/frontend/static/html/pictureUpload.html
@@ -78,7 +78,10 @@
 </button>
 
 <button class="helpBtn6">Help
-    <span class="helpText">Please select the picture you want to upload and click on "Upload Picture"!</span>
+    <span class="helpText">Select a local picture you want to upload and choose a category. <br>
+        If you choose 'User Shootout' as a category your picture will only be uploaded to your own profile without adding it to a public category.<br>
+        If you choose a different caregory your picture will be participating in the public category-shootouts.
+        After choosing your category select "Upload Picture"!</span>
 </button>
 <body>
 <header id="heading">
