- Cases at otherusersDataAnalytics

--- a/frontend/static/html/dataAnalyticsDashboard.html
+++ b/frontend/static/html/dataAnalyticsDashboard.html
@@ -105,12 +105,12 @@
 
         <div class="columnDash">
             <h1>Sum of Created Shootouts</h1>
-            <NumberOfShootouts id = "totalSO" style="text-align: center"></NumberOfShootouts>
+            <NumberOfShootouts id = "totalSO"> </NumberOfShootouts>
         </div>
 
         <div class="columnDash">
             <h1>Today's Shootout Participations</h1>
-            <NumberOfShootouts id = "totalPA"></NumberOfShootouts>
+            <NumberOfShootouts id = "totalPA"> </NumberOfShootouts>
         </div>
 
     </div>
