FAQ Seite wieder aktualisiert

--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>FAQ</title>
     <link rel="icon" href="./images/Herzbeben_Logo.png">
-    <link rel="stylesheet" href="compare_profile.css">
+    <!--<link rel="stylesheet" href="compare_profile.css"> -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- <script type=text/javascript src = "index.js"></script> -->
@@ -21,7 +21,8 @@
             border: none;
             text-align: left;
             outline: none;
-            font-size: 15px;
+            font-size: 17px;
+            font-weight: bold;
             transition: 0.4s;
         }
 
@@ -36,6 +37,19 @@
             overflow: hidden;
             transition: max-height 0.2s ease-out;
         }
+
+        h1  {
+            margin-left: 10px;
+            margin-bottom: 30px;
+            margin-top: 80px;
+            text-shadow: 2px 2px #E9AD9C;
+            text-align: center;
+        }
+
+        p {
+            margin-top: 10px;
+        }
+
     </style>
 </head>
 <body>
@@ -96,7 +110,14 @@
 </header>
 </head>
 
-<p></p>
+<h1>Frequently Asked Questions</h1>
+
+<button class="accordion">How can I create a klicks account?</button>
+<div class="panel">
+    <p>To create an account, click on "Create Account". You have to enter a username, your e-mail address and your name, as well as a password.
+    </p>
+</div>
+
 
 <button class="accordion">How can I create a shootout?</button>
 <div class="panel">
