--- a/frontend/static/html/otherusersprofile.html
+++ b/frontend/static/html/otherusersprofile.html
@@ -139,7 +139,7 @@
 
     <style> /*Style für Profile Gallery*/
     #Feed {
-        margin-top: 250px;
+        margin-top: 50px;
         margin-left: 42px;
         margin-bottom: 50px;
     }
@@ -148,7 +148,7 @@
         margin: 5px;
         float: left;
         margin-left: 20px;
-
+        margin-bottom: 50px;
     }
 
     .gallery img{
