--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -148,7 +148,7 @@
         margin: 5px;
         float: left;
         margin-left: 20px;
-
+        margin-bottom: 50px;
     }
 
     .gallery img{
