--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -132,10 +132,35 @@
 
 <button class="accordion">Who can see my shootout?</button>
 <div class="panel">
-    <p>If you create a private shootout, only you and whoever you invite will be able to see it and participate in it.
-        <br>If you create a public shootout, everyone visiting the page will be able to see it, but only users will be able to participate in it.
+    <p>When you create a shootout, all visitors can view it, but only other klicks users can participate in it.
     </p>
 </div>
+
+<button class="accordion">How can I search for other shootouts?</button>
+<div class="panel">
+    <p>If you want to find someone else's shootout, just search for the name of the shootout in the search bar on the top left of the page.
+    </p>
+</div>
+
+<button class="accordion">Will my pictures be made available to third parties?</button>
+<div class="panel">
+    <p>Your pictures belong to you only. Klicks does not forward any pictures to our partners or other websites.
+    </p>
+</div>
+
+<button class="accordion">How can I upload pictures to be used in a shootout?</button>
+<div class="panel">
+    <p>To upload pictures that you can use to fill a shootout, go to your profile and klick on the "Upload Picture" button.
+    </p>
+</div>
+
+<button class="accordion">How many pictures can be used in a shootout?</button>
+<div class="panel">
+    <p>Shootouts can contain as many pictures as you want.
+    </p>
+</div>
+
+
 
 <button class="accordion"></button>
 <div class="panel">
