--- a/frontend/static/html/otherusersDataAnalyticsDashboard.html
+++ b/frontend/static/html/otherusersDataAnalyticsDashboard.html
@@ -6,6 +6,7 @@
     <title>Data Analytics</title>
     <link rel="icon" href="./images/Herzbeben_Logo.png">
     <link rel="stylesheet" href="dataAnalyticsDashboard.css">
+    <script src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js></script>
 
     <!-- for top navbar -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -104,22 +105,23 @@
 
     <div class="columnDash">
         <h1>Sum of Created Shootouts</h1>
-        <NumberOfShootouts id = "totalSO"> </NumberOfShootouts>
+        <NumberOfShootouts id = "OOO"> </NumberOfShootouts>
     </div>
 
     <div class="columnDash">
         <h1>Today's Shootout Participations</h1>
-        <NumberOfShootouts id = "totalPA"> </NumberOfShootouts>
+        <NumberOfShootouts id = "OOO"> </NumberOfShootouts>
     </div>
 
     <div class="columnDash">
         <h1>Individual Activity</h1>
-        <NumberOfShootouts id = "totalPA"> </NumberOfShootouts>
+        <NumberOfShootouts id = "OOO"> </NumberOfShootouts>
     </div>
 
     <div class="columnDash">
         <h1>Hits Probability</h1>
-        <NumberOfShootouts id = "totalPA"> </NumberOfShootouts>
+        <NumberOfShootouts id = "OOO"> </NumberOfShootouts>
+        <div id="chartContainerProb" style="height: 370px; width: 100%;"></div>
     </div>
 
 </div>
@@ -135,6 +137,86 @@
         else if (document.cookie === ""){
         window.location.replace("http://localhost:8080/index.html");
         }
+
+        //Beginning of Pie Chart
+                var theme = {
+            Chart: {
+                colorSet: "colorSet1",
+                background: "000000",
+            }
+        }
+        CanvasJS.addColorSet("klicksTheme",
+            [//colorSet Array
+                "#6F9EB2",
+                "#d29aaa",
+                "#3f4046",
+                "#764C3C",
+                "#9F454B",
+                "#000000",
+                "#FFFFFF",
+            ])
+
+        CanvasJS.addTheme('Klicks',theme); // You can use any name
+
+
+        var chart = new CanvasJS.Chart("chartContainer", {
+            /*theme: 'Klicks',*/
+            colorSet: 'klicksTheme',
+            backgroundColor: '#f1f1f1',
+            /*theme: "dark2", // "light1", "light2", "dark1", "dark2"*/
+            exportEnabled: true,
+            animationEnabled: true,
+            title: {
+                text: ""
+            },
+            data: [{
+                type: "pie",
+                startAngle: 25,
+                toolTipContent: "<b>{label}</b>: {y}%",
+                showInLegend: "true",
+                legendText: "{label}",
+                indexLabelFontSize: 15,
+                indexLabel: "{label} - {y}%",
+                dataPoints: [
+                    { y: 51.08, label: "User Shootout" },
+                    { y: 27.34, label: "Animals" },
+                    { y: 10.62, label: "Art" },
+                    { y: 5.02, label: "Fashion" },
+                    { y: 4.07, label: "Food" },
+                    { y: 1.22, label: "Nature" },
+                    { y: 0.44, label: "Portrait" }
+                ]
+            }]
+        });
+        chart.render();
+        //End of Pie Chart
+
+        //Beginning of Doughnut Chart
+        var chart = new CanvasJS.Chart("chartContainerProb", {
+            animationEnabled: true,
+            title:{
+                text: "",
+                horizontalAlign: "left"
+            },
+            data: [{
+                type: "doughnut",
+                startAngle: 60,
+                //innerRadius: 60,
+                indexLabelFontSize: 17,
+                indexLabel: "{label} - #percent%",
+                toolTipContent: "<b>{label}:</b> {y} (#percent%)",
+                dataPoints: [
+                    { y: 67, label: "Inbox" },
+                    { y: 28, label: "Archives" },
+                    { y: 10, label: "Labels" },
+                    { y: 7, label: "Drafts"},
+                    { y: 15, label: "Trash"},
+                    { y: 6, label: "Spam"}
+                ]
+            }]
+        });
+        chart.render();
+        //End of Doughnut Chart
     };
 
     function cookiewerteHolen () {
