--- a/frontend/static/html/photographerRanking.html
+++ b/frontend/static/html/photographerRanking.html
@@ -125,10 +125,11 @@
                 var userlist = JSON.parse(json);
                 userlist.reverse();
 
+
                 //User1 ------------------------------------------------------------------------
                 document.getElementById('bestphoto').src = userlist[0].picture;
                 document.getElementById('bestphotowins').innerText = userlist[0].wins;
-                //document.getElementById('1username').innerText = userlist[0].person.username;
+                //document.getElementById('1username').innerText = "<a href=\"otherusersprofile.html\?uid="+shootoutlist[i].person.id+"\" >"+ userlist[0].person.username + "</a>";
                 var username1;
                 username1 = userlist[0].person.username;
                 alert(username1);
