--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -49,14 +49,6 @@
                 <li><a href="impressum.html">Impressum</a></li>
                 <li><a href="compare.html">Compare Pictures</a></li>
                 <li><a href="leaderboards.html">Leaderboards</a></li>
-                <!--a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leaderboards <span class="caret"></span></a>
-                 <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="pictureRanking.html">Picture Ranking</a></li>
-                    <li><a href="photographerRanking.html">Photographer Ranking</a></li>
-                    <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
-                    <li role="separator" class="divider"></li>
-                </ul>
-            </li-->
                 <li><a href="profile.html">Profile</a></li>
                 <li class="dropdown">
                     <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
@@ -77,53 +69,6 @@
             <span title="Upload picture"> <a href="http://localhost:8080/pictureUpload.html"><button id="uploadButton" >+</button></a>  </span>
         </div>
     <div id="usernamefield"></div>
-
-    <!--Flexbox Anfang-->
-    <!-- Header -->
-    <!--<div class="header">
-        <h1>Responsive Image Grid</h1>
-
-    </div>-->
-
-    <!-- Photo Grid
-    <div class="row">
-        <div class="column">
-            <img id="image01" src="‪" alt="no picture uploaded" style="width:100%">
-            <img id="image02" src="" style="width:100%">
-            <img id="image03" src="" style="width:100%">
-            <img id="image04" src="" style="width:100%">
-            <img id="image05" src="" style="width:100%">
-            <img id="image06" src="" style="width:100%">
-            <img id="image07" src="" style="width:100%">
-        </div>
-        <div class="column">
-            <img scr="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-        </div>
-        <div class="column">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-        </div>
-        <div class="column">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-            <img src="" style="width:100%">
-        </div>
-    </div>-->
-
-    <!--Flexbox ENde-->
 
 
     <!-- Feed 2.0--------------------------------------------------------->
@@ -288,3 +233,5 @@
     </footer>
 
     </body>
+
+</html>
