--- a/frontend/static/html/impressum.html
+++ b/frontend/static/html/impressum.html
@@ -67,7 +67,7 @@
 </header>
 <h1 style="text-align: center; margin-top: 60px"><img id="klicks" src="./images/klicks.png" width="400"> </h1>
 
-<div class="row" style="margin-left: 10px">
+<div class="row" style="margin-left: 10px; margin-bottom: 50px">
     <div class="column left">
         <h2 style="text-align: right; color: #9F454B"><b><i>Who we are</i></b></h2>
         <br>
