--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -14,6 +14,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         
@@ -167,7 +169,7 @@
                     Feed.innerHTML +=
                     "<div class='gallery'>"+
                         "<div class='w3-display-container w3-hover-opacity'>" +
-                            "<img id= 'image" + n + "' src='' alt='no pic' width='358' height='239'>"+
+                            "<img id= 'image" + n + "' src='' alt='no pic' width='358' height='239' onclick='openpic(this.src)'>"+
                             "<div class='w3-display-middle w3-display-hover w3-xlarge'>" +
                                     "<p style='color: white; font-size: 70px; font-family:'Helvetica Neue', Helvetica, sans-serif;'>" + photos[i].clicks + "</p>" +
                             "</div>" +
@@ -219,7 +221,32 @@
             }
         }
     }
+
+
+    function openpic(src){
+
+    var modal = document.getElementById('myModal');
+    var modalImg = document.getElementById("img01");
+
+    modal.style.display = "block";
+    modalImg.src = src;
+}
+
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks on <span> (x), close the modal
+    function close() {
+        modal.style.display = "none";
+    }
 </script>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <span class="close" onclick="close()">&times;</span>
+        <img class="modal-content" id="img01">
+    </div>
+
+
     <!--Help button-->
     <button class="helpBtn2">Help
         <span class="helpText">To upload new pictures please click on the "+" and select local files you want to
