--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -16,6 +16,12 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
         
@@ -227,23 +233,16 @@
 
     var modal = document.getElementById('myModal');
     var modalImg = document.getElementById("img01");
-
     modal.style.display = "block";
     modalImg.src = src;
 }
 
-    var span = document.getElementsByClassName("close")[0];
-
-    // When the user clicks on <span> (x), close the modal
-    function close() {
-        modal.style.display = "none";
-    }
 </script>
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
-        <span class="close" onclick="close()">&times;</span>
-        <img class="modal-content" id="img01">
+            <span class="close" onclick="document.getElementById('myModal').style.display='none'" >&times;</span>
+            <img class="modal-content" id="img01">
     </div>
 
 
