--- a/frontend/static/html/AGB.html
+++ b/frontend/static/html/AGB.html
@@ -15,13 +15,16 @@
 
     <style>
         div { margin-left: 4em; margin-right: 4em; }
-        h1 { margin-left: 10px; margin-top: 80px; text-shadow: 2px 2px #E9AD9C; text-align: center; }
+        h1 {
+            margin-left: 10px;
+            margin-top: 80px;
+            text-shadow: 2px 2px #E9AD9C;
+            text-align: center;
+        }
         h3 { margin-left: 20px; }
         ul { margin-top: 10px; }
         p {margin-top: 10px;}
-        body {
-            padding-bottom: 50px;
-        }
+
     </style>
 
 </head>
@@ -73,7 +76,7 @@
                         <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="allusers.html">All Users</a></li>
                             <li><a href="FAQ.html">FAQ</a></li>
-                            <li><a href="AGB.html">AGB's</a></li>
+                            <li><a href="AGB.html">Terms and Conditions</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -312,7 +315,7 @@
 <hr>
 
 <h3>15. Entire Agreement; Other.</h3>
-<div>
+<div style="padding-bottom: 50px">
     This Agreement, with the Privacy Policy, the Safety Tips and any terms disclosed and agreed to by you if you purchase additional features,
     products or services we offer on the Service, contains the entire agreement between you and klicks regarding the use of the Service.
     If any provision of this Agreement is held invalid, the remainder of this Agreement shall continue in full force and effect.
