button admin css

--- a/frontend/static/html/dataAnalyticsDashboard.html
+++ b/frontend/static/html/dataAnalyticsDashboard.html
@@ -36,8 +36,8 @@
                 <div class="heading">DATA ANALYTICS</div>
                 <button class="btnAdmin1" onclick="locationChange()">All Users</button>
                 <button class="helpBtn10">Help
-                    <span class="helpText">This is your data analytics dashboard. It is divided into 2 sections: <br> 1. Geolocation: Track the location of your users <br> 2. User's Preferences: Take a look into the shootout preferecnes. <br> 3. Standard Variance: Examine the deviation of an individual assessment from the average assessment.
-            </span>
+                    <span class="helpText">This is your data analytics dashboard. It provides an overview of the average klicks-user.
+                    </span>
                 </button>
             </div>
 
