--- a/frontend/static/html/otherusersDataAnalyticsDashboard.html
+++ b/frontend/static/html/otherusersDataAnalyticsDashboard.html
@@ -32,7 +32,7 @@
                 <div class="heading">DATA ANALYTICS</div>
                 <button class="btnAdmin1" onclick="locationChange()">All Users</button>
                 <button class="helpBtn13">Help
-                    <span class="helpText">This is your data analytics dashboard. It is divided into 2 sections: <br> 1. Geolocation: Track the location of your users <br> 2. User's Preferences: Take a look into the shootout preferecnes. <br> 3. Standard Variance: Examine the deviation of an individual assessment from the average assessment.
+                    <span class="helpText">This is your data analytics dashboard. It shows the information of the selected user.
             </span>
                 </button>
             </div>
