close pictures profile

--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -241,7 +241,7 @@
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
-            <span id="close" onclick="document.getElementById('myModal').style.display='none'" >Close Window</span>
+            <span id="close" onclick="document.getElementById('myModal').style.display='none'" >X</span>
             <img class="modal-content" id="img01">
     </div>
 
