button leaderboard css

--- a/frontend/static/html/leaderboards.html
+++ b/frontend/static/html/leaderboards.html
@@ -106,6 +106,12 @@
 
 </div>
 
+<!--Help button-->
+<button class="helpBtn14">Help
+    <span class="helpText">On this page you can choose between 3 different leaderboards.
+    </span>
+</button>
+
 <script>
     function locationChange1 (){
     window.location.replace("http://localhost:8080/photographerRanking.html");
