--- a/frontend/static/html/dataAnalyticsDashboard.html
+++ b/frontend/static/html/dataAnalyticsDashboard.html
@@ -110,6 +110,11 @@
 
         <div class="columnDash">
             <h1>Today's Shootout Participations</h1>
+            <NumberOfShootouts id = "todaysPA"> </NumberOfShootouts>
+        </div>
+
+        <div class="columnDash">
+            <h1>Sum of Shootout Participations</h1>
             <NumberOfShootouts id = "totalPA"> </NumberOfShootouts>
         </div>
 
