redirect zu index, wenn man nicht angemeldet ist

--- a/frontend/static/html/AGB.html
+++ b/frontend/static/html/AGB.html
@@ -325,6 +325,15 @@
     and you may not make any representations on behalf of or bind klicks in any manner.
 </div>
 
+<script>
+    window.onload = function () {
+        if (document.cookie === ""){
+        window.location.replace("http://localhost:8080/index.html");
+        }
+    }
+
+</script>
+
 <footer class="footer">
     <p>Klicks Inc. © 2018</p>
 </footer>
