--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -183,6 +183,14 @@
 </div>
 
 <script>
+
+    window.onload = function () {
+
+        if (document.cookie === ""){
+        window.location.replace("http://localhost:8080/index.html");
+        }
+    }
+
     var acc = document.getElementsByClassName("accordion");
     var i;
 
