--- a/frontend/static/html/leaderboards.html
+++ b/frontend/static/html/leaderboards.html
@@ -107,6 +107,13 @@
 </div>
 
 <script>
+    window.onload = function () {
+
+        if (document.cookie === ""){
+        window.location.replace("http://localhost:8080/index.html");
+        }
+    }
+
     function locationChange1 (){
     window.location.replace("http://localhost:8080/photographerRanking.html");
     }
