--- a/frontend/static/html/shootoutRanking.html
+++ b/frontend/static/html/shootoutRanking.html
@@ -145,6 +145,11 @@
 <script>
     window.onload = function (){
         //alert('in function');
+
+        if (document.cookie === ""){
+        window.location.replace("http://localhost:8080/index.html");
+        }
+
         var shootoutID = Werteliste(location.search);
         function Werteliste (querystring) {
             if (querystring == '') return;
