--- a/frontend/static/html/allphotos.html
+++ b/frontend/static/html/allphotos.html
@@ -90,6 +90,10 @@
 
     window.onload = function () {
 
+        if (document.cookie === ""){
+        window.location.replace("http://localhost:8080/index.html");
+        }
+
         var xhr = new XMLHttpRequest();
         var json;
         var anzahluser;
