--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -100,6 +100,10 @@
     //Tabelle erstellen
     window.onload = function () {
 
+        if (document.cookie === ""){
+        window.location.replace("http://localhost:8080/index.html");
+        }
+
             var xhr = new XMLHttpRequest();
             var json;
             var anzahluser;
