--- a/frontend/static/html/otherusersDataAnalyticsDashboard.html
+++ b/frontend/static/html/otherusersDataAnalyticsDashboard.html
@@ -126,6 +126,10 @@
 
 <script>
     window.onload = function () {
+
+    if (document.cookie === ""){
+        window.location.replace("http://localhost:8080/index.html");
+    }
         var userID = cookiewerteHolen();
         var AdminID = "129";
         if (userID !== AdminID ) {
