--- a/frontend/static/html/otherusersprofile.html
+++ b/frontend/static/html/otherusersprofile.html
@@ -163,6 +163,10 @@
     <script>
     window.onload = function () {
 
+        if (document.cookie === ""){
+            window.location.replace("http://localhost:8080/index.html");
+        }
+
         function Werteliste (querystring) {
             if (querystring == '') return;
             var wertestring = querystring.slice(1);
