--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -132,6 +132,10 @@
             return Wert;
         }
 
+        if (document.cookie === ""){
+        window.location.replace("http://localhost:8080/index.html");
+    }
+
 //Bilderabfrage für Flexbox-----------------------------------------------
 
 
