--- a/frontend/static/html/photographerRanking.html
+++ b/frontend/static/html/photographerRanking.html
@@ -117,7 +117,7 @@
        </div><br><br>
        <div>
            <img id="thirdphoto" src="" alt="no pictures ranked yet" style="width:100%" height="250px" width="280px">
-       </div>
+       </div><br><br><br>
 
    </div>
 </div>
