--- a/frontend/static/html/shootoutRanking.html
+++ b/frontend/static/html/shootoutRanking.html
@@ -122,7 +122,7 @@
           </div><br><br>
           <div>
               <img id="Thirdpic" src="" alt="no pictures ranked yet" style="width:100%" height="250px" width="280px">
-          </div>
+          </div><br><br><br>
 
       </div>
   </div>
