--- a/frontend/static/html/page.html
+++ b/frontend/static/html/page.html
@@ -72,8 +72,8 @@
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Sign out</a></li>
                         </ul>
-                    </li>
-                </ul>-->
+                    </li>-->
+                </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
@@ -84,11 +84,11 @@
 
     <h1>Search for Users</h1>
     <input  type="text" class="form-control" id="user_input" placeholder="Search for users by username" onkeyup="searchUser()">
-    <select id="mySelect">
+    <!--<select id="mySelect">
         <option value="username">Search by Username</option>
         <option value="firstname">Search by Firstname</option>
         <option value="lastname">Search by Lastname</option>
-    </select>
+    </select>-->
 
     <table id="result" border="solid black" >
         <tr>
