--- a/frontend/static/html/page.html
+++ b/frontend/static/html/page.html
@@ -32,8 +32,7 @@
                 <div class="heading">DATA ANALYTICS</div>
                 <button class="btnAdmin" onclick="locationChange()">Average User</button>
                 <button class="helpBtn12">Help
-                    <span class="helpText">This is your data analytics dashboard. It is divided into 2 sections: <br> 1. Geolocation: Track the location of your users <br> 2. User's Preferences: Take a look into the shootout preferecnes. <br> 3. Standard Variance: Examine the deviation of an individual assessment from the average assessment.
-            </span>
+                    <span class="helpText">On this page you can select a specific user and view the data.</span>
                 </button>
             </div>
 
